--- a/website-assets/scss/settings.scss
+++ b/website-assets/scss/settings.scss
@@ -11,7 +11,6 @@
 	background-color: $menu-button-bgc;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
 	cursor: pointer;
-	z-index: 8;
 	.line-1, .line-2, .line-3 {
 		width: 50%;
 		height: 3px;
