--- a/website-assets/scss/styles.scss
+++ b/website-assets/scss/styles.scss
@@ -24,7 +24,6 @@ body {
 	position: relative;
 	display: block;
 	overflow: auto;
-	z-index: 1;
 }
 
 .screen {
