--- a/website-assets/scss/tiles.scss
+++ b/website-assets/scss/tiles.scss
@@ -7,12 +7,54 @@
 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.3);
 	margin: 15px 0px;
 	padding: 6px;
+	overflow: hidden;
+	height: $tile-size + $tiles-list-padding*2 + $tile-margin*2 + 1;
 	.wrapper {
 		width: 100%;
 		height: 100%;
 		display: inline-block;
-		overflow: auto;
 		position: relative;
+		overflow: auto;
 	}
 }
 
+.tiles .tile {
+	width: $tile-size;
+	height: $tile-size;
+	margin: $tile-margin;
+	padding: 4px;
+	box-shadow: 0px 1px 14px 0px rgba(0,0,0,0.4);
+	text-align: center;
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	.color {
+		width: $tile-size/2;
+		height: $tile-size/2;
+		display: block;
+		margin: 2px auto;
+		border: 1px solid lightgray;
+	}
+	.title {
+		margin: 3px 0px;
+		font-size: 14px;
+		font-weight: 600;
+	}
+	.info {
+		font-size: 12px;
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
+	}
+	.edit-button {
+		cursor: pointer;
+		font-weight: 500;
+		user-select: none;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
