--- a/website-assets/scss/vars.scss
+++ b/website-assets/scss/vars.scss
@@ -24,4 +24,6 @@ $tools-tool-border-color: $text-color;
 
 
 //TILES
-$tile-size: 120px;
+$tile-size: 100px;
+$tile-margin: 8px;
+$tiles-list-padding: 6px;
